# obsidian-to-typst

./: .gitignore  .justfile  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: test.yml
examples/feature_guide/: Sprocketing.md  Widget.md  Widgeting.md
src/obsidian_to_latex/: document.tex  document.typ  obsidian_to_latex.py  process_markdown.py
src/obsidian_to_typst/: __init__.py  document.typ  obsidian_path.py  obsidian_to_typst.py  process_markdown.py
tests/obsidian_to_latex/: test_process_markdown.py
tests/test_obsidian_to_typst/: test_process_markdown.py
