[project]
authors = [{ name = "Ryan Bartling", email = "ryan.bartling@gmail.com" }]
description = "Convert Obsidian vault documents to typst and pdfs"
license = "MIT"
name = "obsidian-to-typst"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.2.0"
dependencies = [
    "click>=8.2.1",
    "colorama >=0.4.6",
    "coloredlogs >=15.0.1",
    "colored-traceback >=0.3.0",
    "pydantic >=2.7.1",
]

[project.urls]
repository = "https://github.com/drbartling/obsidian-to-typst"

[project.scripts]
obsidian-to-typst = "obsidian_to_typst.obsidian_to_typst:main"

[dependency-groups]
dev = [
    "behave >=1.2.6",
    "black >=24.4.2",
    "coverage >=7.5.1",
    "devtools >=0.12.2",
    "isort >=5.13.2",
    "pre-commit >=3.7.0",
    "pylint >=3.1.0",
    "pytest >=8.2.0",
    "pytest-cov >=5.0.0",
    "ruff>=0.12.10",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["obsidian_to_typst"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 80

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.isort]
line_length = 80
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--cov-report=term-missing:skip-covered",
    "--cov",
    "--durations=5",
    "--ignore=acceptance_test",
]
testpaths = ["tests"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]
