[project]
authors = [{name = "Ryan Bartling", email = "ryan.bartling@gmail.com"}]
description = "Convert Obsidian vault documents to typst and pdfs"
license = "MIT"
name = "obsidian-to-typst"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.2.2"
dependencies = [
    "click>=8.2.1",
    "colorama >=0.4.6",
    "coloredlogs >=15.0.1",
    "colored-traceback >=0.3.0",
    "pydantic >=2.7.1",
]

[project.urls]
repository = "https://github.com/drbartling/obsidian-to-typst"

[project.scripts]
obsidian-to-typst = "obsidian_to_typst.obsidian_to_typst:main"

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "devtools >=0.12.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["obsidian_to_typst"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
precision = 2
show_missing = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]
